# git-module

./: .gitignore  CMakeLists.txt  LICENSE  README
tests/: clar_test.h
